# rust-postgres-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Dockerfile.rust  Procfile  README.md  docker-compose.yml
.github/: main.yml
.github/workflows/: main.yml
config/: default.toml  development.toml  production.toml
migrations/: 2020-05-27_00-59-47_initial.sql  2020-05-27_00-59-50_user.sql
src/: lib.rs  main.rs  tests.rs
src/core/: factory.rs  mod.rs
src/core/auth/: middleware.rs  mod.rs  models.rs  routes.rs  utils.rs  viewer.rs
src/core/db/: mod.rs  model.rs  pool.rs
src/core/http/: mod.rs  server.rs
src/core/http/middlewares/: mod.rs  viewer.rs
src/core/settings/: mod.rs
src/core/types/: mod.rs
src/db/: mod.rs  pool.rs  schema.rs
src/db/repo/: user.rs
src/http/: api.rs  mod.rs
src/http/middlewares/: viewer.rs
src/settings/: mod.rs
src/todo/: factory.rs  mod.rs  model.rs  routes.rs
src/user/: auth.rs  mod.rs  model.rs  routes.rs
src_old/: lib.rs  main.rs
src_old/core/types/: mod.rs  user.rs
src_old/core/types/io/: get_current_user.rs  login_user.rs  register_user.rs
src_old/core/usecases/: get_current_user.rs  login_user.rs  mod.rs  register_user.rs
src_old/db/: mod.rs  pool.rs
src_old/db/factories/: mod.rs
src_old/db/models/: user.rs
src_old/db/repo/: token.rs
src_old/http/: api.rs  mod.rs
src_old/http/errors/: handlers.rs
src_old/http/resources/: mod.rs
src_old/http/resources/users/: handlers.rs  io.rs
src_old/settings/: mod.rs
tests/: api.rs  integration_test.rs
tests/common/: db.rs  mod.rs  runner.rs
tests/todos/: api.rs  model.rs
tests/users/: api.rs  mod.rs  model.rs
