[package]
name = "planet-express"
version = "0.1.0"
authors = ["ncrmro <ncrmro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.8"
listenfd = "0.3.3"
actix-web = "2.0.0"
actix-rt = "1.1.0"
serde = "1.0.106"
serde_derive = "1.0.110"
serde_json = "1.0.51"
sqlx = { version = "0.3.5", features = [ "postgres" ] }
futures = "0.3.4"
env_logger = "0.7.1"
log = "0.4.8"
anyhow = "1.0.28"
