[package]
name = "planet-express"
version = "0.1.0"
authors = ["ncrmro <ncrmro@gmail.com>"]
edition = "2018"
default-run = "planet-express"


[lib]
doctest = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10.1"
listenfd = "0.3.3"
actix-web = "2.0.0"
actix-rt = "1.1.0"
actix-service = "1.0.5"
actix-http = "1.0.1"
serde = "1.0.106"
serde_derive = "1.0.110"
serde_json = "1.0.51"
sqlx = { version = "0.3.5", features = [ "postgres", "uuid", "chrono", "tls" ] }
futures = "0.3.4"
futures-util = "0.3.5"
env_logger = "0.7.1"
log = "0.4.8"
anyhow = "1.0.28"
paperclip = { git = "https://github.com/wafflespeanut/paperclip", rev = "d3f2a950efa35b2496ce68d85a319ae01cecb40f" ,features = ["actix", "chrono"] }
fancy-regex = "0.3.5"
rand = "0.7.3"
fake = { version = "2.2", features=['derive', 'chrono']}
rust-argon2 = "0.8"
jsonwebtoken = "7"
chrono = { version = "0.4.11", features = ["serde"] }
clap = "3.0.0-beta.1"
async-trait = "0.1.35"
dotenv = "0.15.0"
